improve File figuration add commands add plugin message i18n