@@ -1,14 +1,21 @@
 package site.hjfunny.velochatx;
 
 import com.google.inject.Inject;
+import com.velocitypowered.api.command.CommandManager;
+import com.velocitypowered.api.command.CommandMeta;
+import com.velocitypowered.api.command.SimpleCommand;
 import com.velocitypowered.api.event.Subscribe;
 import com.velocitypowered.api.event.proxy.ProxyInitializeEvent;
 import com.velocitypowered.api.plugin.Plugin;
 import com.velocitypowered.api.proxy.ProxyServer;
 import me.waterwood.plugin.WaterPlugin;
 import org.slf4j.Logger;
+import site.hjfunny.velochatx.commands.MentionCommand;
+import site.hjfunny.velochatx.commands.ReloadCommand;
+import site.hjfunny.velochatx.events.CommandEvents;
+import site.hjfunny.velochatx.events.PlayerEvents;
 
-import static me.waterwood.common.basics.parseColor;
+import static me.waterwood.common.Basics.parseColor;
 
 @Plugin(
         id = "velochatx",
@@ -21,7 +28,7 @@ public class VeloChatX extends WaterPlugin {
     private static VeloChatX Instance;
     @Inject
     public VeloChatX(ProxyServer server , Logger logger){
-        super(logger);
+        super(logger,server);
         this.logger = logger;
         this.server = server;
     }
@@ -29,28 +36,31 @@ public class VeloChatX extends WaterPlugin {
 
     @Subscribe
     public void onProxyInitialization(ProxyInitializeEvent event) {
-        logger.info(parseColor("§b _____   _____   _       _____   _____   _   _       ___   _____  __    __ "));
-        logger.info(parseColor("§b|  _  \\ | ____| | |     /  _  \\ /  ___| | | | |     /   | |_   _| \\ \\  / / "));
-        logger.info(parseColor("§b| | | | | |__   | |     | | | | | |     | |_| |    / /| |   | |    \\ \\/ / "));
-        logger.info(parseColor("§b| | | | |  __|  | |     | | | | | |     |  _  |   / / | |   | |     }  {   "));
-        logger.info(parseColor("§b| |_| | | |___  | |___  | |_| | | |___  | | | |  / /  | |   | |    / /\\ \\  "));
-        logger.info(parseColor("§b|_____/ |_____| |_____| \\_____/ \\_____| |_| |_| /_/   |_|   |_|   /_/  \\_\\ "));
-        logger.info(parseColor(String.format("§aVelochatX V%s  Author:%s",getPluginData().get("version"),getPluginData().get("author"))) );
+        logger.info(parseColor("                                               "));
+        logger.info(parseColor("§1 __|  ___  |    __   __  |__   __  _|_  \\_'"));
+        logger.info(parseColor("§1(__| (__/_ |_, (__) (___ |  ) (__(  |_, / \\"));
+        logger.info(parseColor("                                               "));
+        logger.info(parseColor("DeloChatX §bV%s §2Author:§rWaterwood".formatted(getPluginInfo("version"))));
+        Long start = System.currentTimeMillis();
         Instance = this;
-        server.getEventManager().register(this, new ChatEvent());
-        ChatProcesser.load();
-        if(! ChatProcesser.hasLuckPerm()){
-            logger.warn("Cannot connect to LuckPerms,perfix && suffix is unavailable.");
-        }
-        try{
-            config = getConfig().loadConfig();
-        }catch(Exception e){
-            logger.warn("Can't load the config file make sure the file is existed and is not occupied");
-        }
+        config = getConfig();
+        logger.info(parseColor(config.getString("config-files-load-message")));
+        init();
+        logger.info(parseColor(config.getString("successfully-enable-message").formatted(System.currentTimeMillis() - start)));
     }
-    public ProxyServer getProxyServer(){
-        return server;
+    public void init(){
+        logger.info(parseColor(config.getString("init-process-message")));
+        server.getEventManager().register(this, new PlayerEvents());
+        server.getEventManager().register(this, new CommandEvents());
+        Methods.load();
+        registerCommands();
     }
+
+    public void registerCommands(){
+        registerCommand(this,new ReloadCommand(),"VeloChatX","vcx","chatx");
+        registerCommand(this,new MentionCommand(),"mention","at","@");
+    }
+
     public static VeloChatX getInstance(){
         return Instance;
     }
